--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,21 @@
 body {
+    position: relative;
     background-color: #e5e5f7;
+    font-family: 'Roboto', sans-serif;
+    min-height: 100vh;
+}
+
+body::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     opacity: 0.8;
     background-image: linear-gradient(#444cf7 0.7000000000000001px, transparent 0.7000000000000001px), linear-gradient(to right, #444cf7 0.7000000000000001px, #e5e5f7 0.7000000000000001px);
     background-size: 14px 14px;
-    font-family: 'Roboto', sans-serif;
-    min-height: 100vh;
+    z-index: -1;
 }
 
 @media (max-width: 576px) {
